48.rc - DEVEL
==========================

- Update the selection highlighting to more closely follow the focus
- Fix the focus jumping around on resize
- Fix the grid not grabbing the focus on Back
- Fix Reset Board incorrectly affecting the Timer after a reload
- Fix the earmark picker buttons not having an Accessible label

48.beta - January 31, 2025
==========================

- Add custom accent color palette of 18 colors
- Add support for row/column/block highlighting with accent colors
- Update selection and highlighter colors to use oklab

48.alpha - January 10, 2025
==========================

- Port to blueprints
- Use GtkStack and its animations for the number_picker, play/pause
  and fullscreen/unfullscreen buttons
- Fix Warnings shortcut not working
- Add mouse button binding for Back
- Stop saving elapsed time on game completion when Timer is disabled
- Includes changes from 47.1
- Updated translations:
  Alexander Shopov (bg); Sergio Gil (es); Danial Behzadi (fa); Yaron
  Shahrabani (he); Ekaterine Papava (ka); Juliano de Souza Camargo
  (pt_BR); Sergej A. (ru); Martin (sl); Anders Jonsson (sv); Sabri Ünal
  (tr); Yuri Chornoivan (uk); Luming Zh (zh_CN).

47.1.1 - October 18, 2024
==========================

- Fix metainfo screenshots

47.1 - October 18, 2024
==========================

- Fix tooltip font color in light mode
- Fix a case when the highlighter doesn't get cleared with undo
- Fix view not grabbing the focus on start blocking keyboard shortcuts
- Fix reset zoom shortcut not working
- Fix pause button having no tooltip
- Fix meson build requirements
- Updated translations:
  Martin (sl). Jürgen Benvenuti (de); Hugo Carvalho (pt); Rafael
  Fontenelle (pt_BR); Luming Zh (zh_CN).

47.0 - September 13, 2024
==========================

- Switch back all keyboard input to KeyPress
- The number picker buttons will no longer grab the focus which was
  blocking movement keys and shortcuts
- Let mouse shortcuts be used in the number picker