@@ -5,6 +5,7 @@
 - Fix the focus jumping around on resize
 - Fix the grid not grabbing the focus on Back
 - Fix Reset Board incorrectly affecting the Timer after a reload
+- Fix Show Possibilities setter not working after a reload
 - Fix the earmark picker buttons not having an Accessible label
 
 48.beta - January 31, 2025
